--- a/HW1/HW1_02-10.tex
+++ b/HW1/HW1_02-10.tex
@@ -4,6 +4,7 @@
 \input{../preamble_files/figures}
 \input{../preamble_files/references}
 \input{../preamble_files/shortcuts}
+\input{../preamble_files/listings}
 
 \pagestyle{fancy}
 \lhead{Richard Whitehill}
@@ -18,7 +19,11 @@
 
 \begin{document}
 
-Text goes here.
+\begin{python}
+print('Hello World!')
+self.total
+\end{python}
+
 
 
 \end{document}
