--- a/HW1/HW1_02-10.tex
+++ b/HW1/HW1_02-10.tex
@@ -9,7 +9,7 @@
 \pagestyle{fancy}
 \lhead{Richard Whitehill}
 \chead{MATH 551 -- HW 1}
-\rhead{DATE}
+\rhead{02/10/22}
 \cfoot{\thepage~of~\pageref{LastPage}}
 
 \newcommand{\prob}[2]{\textbf{#1)} #2}
@@ -19,10 +19,7 @@
 
 \begin{document}
 
-\begin{python}
-print('Hello World!')
-self.total
-\end{python}
+Text goes here.
 
 
 
