updated revisions for HW 3

--- a/HW3/HW3_revision_04-07.tex
+++ b/HW3/HW3_revision_04-07.tex
@@ -108,7 +108,12 @@ Yes, the interpolating polynomial is always (by construction) of degree $n$ when
     It is clear that if $a_{n}$ is nonzero, then our interpolating polynomial is of degree $n$.
     However, it may not always be the case that $a_{n} \ne 0$.
     For example, suppose we may have data which is interpolated by a linear polynomial (i.e. a line), but we have more than $2$ data points.
-}
+    Consider the interpolating polynomial for the data in part (a):
+    \[
+    \frac{1}{2}(\left( x-3 \right)\left( x-4 \right) - 3\left( x-2 \right)\left( x-4 \right) + \frac{5}{2}\left( x-2 \right)\left( x-3 \right) = 2 x - 3
+    .\]
+    This polynomial has degree 1, but our data contains 3 points.
+    }
 
 \prob{3}{For the data (-2,0), (0,4), and (1,9).}
 
