--- a/HW5/prob3_0-7.tex
+++ b/HW5/prob3_0-7.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Table for 0.7, where $f'(0.7) = 0.76484$}
+\caption{Table for $a = 0.7$, where $f'(0.7) = 0.76484$}
 \begin{tabular}{lcccccc}
 \toprule
     $h$ & \makecell{Forward \\ Difference} & \makecell{Forward \\ Error} & \makecell{Forward \\ Order} & \makecell{Backward \\ Difference} & \makecell{Backward \\ Error} & \makecell{Backward \\ Order} \\
