--- a/HW5/prob3_0-5.tex
+++ b/HW5/prob3_0-5.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Table for 0.5, where $f'(0.5) = 0.87758$}
+\caption{Table for $a = 0.5$, where $f'(0.5) = 0.87758$}
 \begin{tabular}{lcccccc}
 \toprule
     $h$ & \makecell{Forward \\ Difference} & \makecell{Forward \\ Error} & \makecell{Forward \\ Order} & \makecell{Backward \\ Difference} & \makecell{Backward \\ Error} & \makecell{Backward \\ Order} \\
