--- a/HW5/prob3_0-6.tex
+++ b/HW5/prob3_0-6.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Table for 0.6, where $f'(0.6) = 0.82534$}
+\caption{Table for $a = 0.6$, where $f'(0.6) = 0.82534$}
 \begin{tabular}{lcccccc}
 \toprule
     $h$ & \makecell{Forward \\ Difference} & \makecell{Forward \\ Error} & \makecell{Forward \\ Order} & \makecell{Backward \\ Difference} & \makecell{Backward \\ Error} & \makecell{Backward \\ Order} \\
